@@ -5,36 +5,32 @@ import com.ufcg.psoft.project.exception.usuario.UsuarioNaoExisteException;
 import com.ufcg.psoft.project.exception.usuario.UsuarioNaoPromovidoException;
 import com.ufcg.psoft.project.model.*;
 import com.ufcg.psoft.project.repository.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
+import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class PromocaoPremiumServiceImpl implements PromocaoPremiumService {
 
-    @Autowired
-    private UsuarioRepository usuarioRepository;
+    private final UsuarioRepository usuarioRepository;
 
-    @Autowired
-    private PalpiteRepository palpiteRepository;
+    private final PalpiteRepository palpiteRepository;
 
-    @Autowired
-    private GrupoRepository grupoRepository;
+    private final GrupoRepository grupoRepository;
 
-    @Autowired
-    private PontuacaoPalpiteRepository pontuacaoPalpiteRepository;
+    private final PontuacaoPalpiteRepository pontuacaoPalpiteRepository;
 
-    @Autowired
-    private PromocaoPremiumRepository promocaoPremiumRepository;
+    private final PromocaoPremiumRepository promocaoPremiumRepository;
 
-    @Autowired
-    private ContadorRequisicoes contadorRequisicoes;
+    private final ContadorRequisicoes contadorRequisicoes;
+
+    private final Clock clock;
 
     @Value("${project.premium.min-palpites:50}")
     private int minPalpites;
@@ -53,7 +49,7 @@ public class PromocaoPremiumServiceImpl implements PromocaoPremiumService {
     public void avaliarPromocoes() {
         List<Usuario> usuariosPadrao = usuarioRepository.findAll().stream()
                 .filter(u -> u.getPerfil() == PerfilUsuario.PADRAO)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Usuario usuario : usuariosPadrao) {
             if (promocaoPremiumRepository.existsByUsuarioId(usuario.getId())) {
@@ -87,7 +83,7 @@ public class PromocaoPremiumServiceImpl implements PromocaoPremiumService {
 
                 PromocaoPremium promocao = PromocaoPremium.builder()
                         .usuario(usuario)
-                        .data(LocalDateTime.now())
+                        .data(LocalDateTime.now(clock))
                         .motivo(motivo)
                         .palpites((int) palpites)
                         .gruposParticipa((int) gruposParticipa)
